fix: increase z-index on main menu

--- a/docker-images/adminer/adminer.css
+++ b/docker-images/adminer/adminer.css
@@ -97,7 +97,7 @@ input {
   padding: 0;
   position: fixed;
   top: 0;
-  z-index: 2;
+  z-index: 3;
 }
 
 #menu::after {
